# AI-Powered-Code-Review-Assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
code_review_assistant/: __init__.py  cli.py  config.py  models.py  review_engine.py
code_review_assistant/ai/: chatbot.py  provider.py  reviewer.py
code_review_assistant/analyzers/: complexity.py  heuristics.py  static.py
code_review_assistant/github/: client.py
code_review_assistant/reporting/: formatter.py
tests/: test_heuristics.py
